--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "use-tensorflow": "^0.3.2"
   },
   "devDependencies": {
+    "@types/node": "^14.6.4",
     "env-cmd": "^8.0.2",
     "react-scripts": "2.1.8"
   },
