--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
-REACT_APP_LOGO="./img/TriAzurIcon.png"
-REACT_APP_COMPANY="TriAzur"
+REACT_APP_LOGO="./img/MyAppIcon.png"
+REACT_APP_COMPANY="MyCompany"
